--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
   {% if title %}
   <title>{{ title }} - Study Buddy</title>
   {% else %}
